--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build:fail": "cd ./fail && npm run build",
+    "build:success-1": "cd ./success-1 && npm run build",
+    "build:success-2": "cd ./success-2 && npm run build",
+    "build:success-3": "cd ./success-3 && npm run build"
   },
   "dependencies": {
     "next": "10.0.8",
