--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build:fail": "cd ./fail && npm run build",
     "build:success-1": "cd ./success-1 && npm run build",
     "build:success-2": "cd ./success-2 && npm run build",
-    "build:success-3": "cd ./success-3 && npm run build"
+    "build:success-3": "cd ./success-3 && npm run build",
+    "build:success-4": "cd ./success-4 && npm run build"
   },
   "dependencies": {
     "next": "10.0.8",
