Update built output

--- a/success-3/package.json
+++ b/success-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fail",
+  "name": "success-4",
   "type": "module",
   "scripts": {
     "build": "../node_modules/.bin/next build ./next"
